--- a/APP/package.json
+++ b/APP/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^4.0.0",
     "ejs": "",
     "express": "",
+    "express-fileupload": "^0.4.0",
+    "form-data": "^2.3.2",
     "mongodb": "^3.0.4"
   },
   "repository": {
