--- a/APP/manifest.yml
+++ b/APP/manifest.yml
@@ -1,7 +1,7 @@
 applications:
 - path: .
-  memory: 512M
-  instances: 1
+  memory: 768mb
+  instances: 2
   domain: mybluemix.net
   name: catsmatch
   host: catsmatch
